authservice/istio/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oidc
spec:
  hosts:
  - "*"
  gateways:
  - oidc-gateway
  http:
  - match:
    - uri:
        prefix: /keycloak-1/oauth
    - uri:
        prefix: /html
    - uri:
        prefix: /headers
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
